--- a/.lando.yml
+++ b/.lando.yml
@@ -16,7 +16,20 @@ services:
       password: wordpress
       database: wordpress
 
-
+tooling:
+  'db-export [file]':
+    service: :host
+    description: Exports database from a database service to a file
+    cmd: /helpers/sql-export.sh
+    user: root
+    options:
+      host:
+        description: The database service to use
+        default: database
+        alias:
+          - h
+      stdout:
+        description: Dump database to stdout
 
 
 # env_file:
